--- a/index.css
+++ b/index.css
@@ -265,6 +265,8 @@ button {
 }
 
 .about-link-resume {
+  font-family: "Manrope", sans-serif;
+
   display: inline-block;
   margin-top: 20px;
   padding: 12px 24px;
@@ -450,8 +452,7 @@ button {
   }
 
   .start-title {
-    font-family: "Pathway Gothic One", sans-serif;
-
+    font-family: "Manrope", sans-serif;
     font-size: 45px;
 
     span {
@@ -469,6 +470,8 @@ button {
   }
 
   .start-btn-know-more {
+    font-family: "Manrope", sans-serif;
+
     font-size: 18px;
     padding: 20px 40px;
   }
@@ -479,6 +482,8 @@ button {
   }
 
   .about-description {
+    font-family: "Manrope", sans-serif;
+
     font-size: 20px;
     line-height: 32px;
     max-width: 800px;
